<resources>
    <string name="app_name">Emergency App</string>
    <string name="button_1">Чрезвычайные ситуации и их классификация</string>
    <string name="button_2">Оказание первой медицинской помощи больным и пострадавшим</string>
    <string name="button_3">Эвакуационная памятка</string>
    <string name="numbers_firefighters">пожарные</string>
    <string name="numbers_firefighters_info">101</string>
    <string name="numbers_police">полиция</string>
    <string name="numbers_police_info">102</string>
    <string name="numbers_med">скорая помощь</string>
    <string name="numbers_med_info">103</string>
    <string name="h1">Чрезвычайные ситуации и их классификация</string>
    <string name="h1Text">Чрезвычайная ситуация — обстановка на определенной территории,
        сложившаяся в результате аварии, катастрофы, опасного природного
        явления, ведения боевых действий или террористического акта или
        вследствие этих действий и актов, или иного бедствия, которая может
        повлечь или повлекла за собой человеческие жертвы среди населения, ущерб
        здоровью людей или окружающей среде, значительные материальные потери
        и нарушение условий жизнедеятельности людей
    </string>
    <string name="h1_1">Общие сведения о чрезвычайных ситуациях</string>
    <string name="h1_2Text">На территории России за год в среднем происходит до 230−250
        чрезвычайных ситуаций, связанных с опасными природными процессами, и
        до 900−950 чрезвычайных ситуаций, связанных с производственной
        деятельностью человека. Статистика и долгосрочное прогнозирование
        показывают, что эти цифры имеют тенденцию к дальнейшему росту, и в
        первую очередь, за счет увеличения числа различных событий.

        \n\nХарактер чрезвычайных ситуаций зависит от причины их
        возникновения и от величины зоны охвата территории, на которой они
        возникли и протекали. В зависимости от причины возникновения ЧС имеют
        следующий характер: природный, техногенный, экологический, социальнобиологический, военный
        и космический. В зависимости от величины зоны
        охвата: локальный, муниципальный, межмуниципальный, региональный,
        межрегиональный и федеральный.
    </string>
    <string name="h1_3Text">
        Под стихийным бедствием понимается разрушительное природное или
        природно-техногенное явление, в результате которого может возникнуть или
        возникает угроза жизни и здоровью людей, происходит разрушение или
        уничтожение материальных ценностей и элементов окружающей среды.

        \n\nПод аварией понимается опасное происшествие на промышленном
        объекте или на транспорте, создающее угрозу жизни и здоровью людей и
        приводящее к разрушению производственных помещений и сооружений,
        повреждению или уничтожению оборудования, механизмов, транспортных
        средств, сырья и готовой продукции, к нарушению производственного
        процесса и нанесению ущерба окружающей среде.

        \n\nПод катастрофой понимается крупная авария (стихийное бедствие),
        повлекшая за собой человеческие жертвы, ущерб здоровью людей,
        разрушение или уничтожение объектов и других материальных ценностей в
        значительных размерах, а также приведшая к серьезному ущербу
        окружающей среде.
    </string>
    <string name="h1_4Text">
        Во многих случаях предпосылки для появления подобных событий как
        в природной, так и в техногенной сфере, влекущих за собой чрезвычайные
        ситуации, создает сам человек. Поэтому в процессе взаимоотношений
        человека со средой в ходе производственной деятельности следует
        максимально снизить риск появления таких факторов, чтобы потом не
        тратить огромные средства на ликвидацию возникших на их основе
        чрезвычайных ситуаций.

        \n\nНе всякое исходное явление природного или техногенного характера
        можно считать чрезвычайной ситуацией. Факт наличия чрезвычайной
        ситуации определяется системой критериев.

        \n\nОсновой системы критериев, определяющих наличие ЧС и
        характеризующих их по масштабу и степени ущерба, является принцип
        фиксации. Фиксируется количество пострадавших жителей, наличие
        материального ущерба, масштаб зоны бедствия данного события. При этом
        выполнение хотя бы одного из трех указанных критериев дает основание
        сделать вывод о наличии чрезвычайной ситуации.
    </string>
    <string name="h2">Оказание первой медицинской помощи больным и пострадавшим.
         Первоочередные действия</string>
    <string name="h2_text">В первую очередь помощь оказывают тем,
        кто задыхается, у кого обильное наружное кровотечение,
        проникающее ранение грудной клетки или живота, кто находится
        в бессознательном или тяжелом состоянии.
    </string>
    <string name="h2_1_text">
        Убедись, что тебе и пострадавшему ничто не угрожает.
        Используй медицинские перчатки для защиты от
        биологических жидкостей пострадавшего.
        Вынеси (выведи) пострадавшего в безопасную зону.
    </string>
    <string name="h2_2_text">Определи наличие пульса, самостоятельного дыхания,
        реакции зрачков на свет.
    </string>
    <string name="h2_4_text">Восстановить дыхание при помощи
        искусственного дыхания восстановить сердечную деятельность
        путем применения непрямого массажа сердца
    </string>
    <string name="h2_5_text">Останови наружное кровотечение.</string>
    <string name="h2_6_text">Наложить на грудную клетку
        герметизирующую повязку при проникающем ранении.
    </string>
    <string name="h2_7_text">Вызови самостоятельно или
        с помощью окружающих скорую помощь. Наложи
        асептическую (чистую) повязку на раны.
    </string>
    <string name="h2_8_text">Обеспечь неподвижность частей тела в местах перелома.</string>
    <string name="h2_9_text">Приложи холод к больному месту (ушиба, перелома, ранения).</string>
    <string name="h2_10_text">Уложи в сохраняющее положение,
        защити от переохлаждения, дай теплое подсоленное
        или сладкое питье (не поить и не кормить при
        отсутствии сознания и травме живота).
    </string>
    <string name="h3">Порядок проведения сердечно-легочной реанимации</string>
    <string name="h3_h1">1. Правила определения пульса, дыхания и
        реакции зрачков на свет
    </string>
    <string name="h3_h2">2. Последовательность проведения
        искусственной вентиляции легких
    </string>
    <string name="h3_text"><b>Внимание!</b> К реанимации
        приступай только при отсутствии признаков жизни
    </string>
    <string name="h3_1_text">
        Определи наличие пульса на сонной артерии. Пульс есть,
        значит пострадавший жив.
    </string>
    <string name="h3_2_text">Прислушайся к дыханию, установи наличие
        или отсутствие движений грудной
        клетки. Движение грудной клетки есть - пострадавший жив.
    </string>
    <string name="h3_3_text">Определи реакцию зрачков на свет,
        приподнимая верхнее веко обоих глаз.
        Зрачки на свету сужаются - пострадавший жив.
    </string>
    <string name="h3_4_text">Обеспечь проходимость верхних дыхательных
        путей. С помощью марли удали круговым движением пальцев из
        полости рта слизь, кровь, иные инородные предметы.
    </string>
    <string name="h3_5_text"> Запрокинь голову пострадавшего.
        Приподними подбородок, удерживая шейный отдел позвоночника.
        <i>Не выполнять при подозрении на перелом шейного отдела позвоночника!</i>
    </string>
    <string name="h3_6_text">
        Зажми нос пострадавшего большим и указательным
        пальцами. Используя устройство для искусственной венти-ляции
        легких типа «рот-устройство-рот», герметизируй
        полость рта, произведи два максимальных, плавных
        выдоха ему в рот. Дай 2-3 секунды на каждый
        пассивный выдох пострадавшего. Контролируй,
        приподнимается ли грудь пострадавшего
        при вдохе и опускается ли при выдохе.
    </string>
    <string name="h4">Правила закрытого массажа сердца</string>
    <string name="h5">Применение метода Геймлиха для удаления инородных тел из дыхательных путей.</string>
    <string name="h5_1"><b>Признаки:</b> пострадавший задыхается (судорожные дыхательные движения),
        не способен говорить, внезапно становится синюшным, может потерять сознание.
    </string>
    <string name="h5_2"><b>Внимание!</b> Дети часто вдыхают части игрушек, орехи, конфеты.</string>
    <string name="h5_1_text">Положи младенца на предплечье левой руки, ладонью
        правой руки хлопни 2-3 раза между лопатками. Переверни
        младенца вниз головой и подними его за ноги.
    </string>
    <string name="h5_2_text">Обхвати пострадавшего сзади руками и сцепи их в
        «замок» чуть выше его пупка, под реберной дугой. С силой резко надави
        сложенными в «замок» кистями в надчревную область. Повтори серию
        надавливаний 3 раза. Беременным женщинам следует сдавливать нижние
        отделы грудной клетки.
    </string>
    <string name="h5_3_text">Если пострадавший без сознания, сядь сверху на бедра,
        обеими ладонями резко надави на реберные дуги. Повтори серию надавливаний 3 раза.
    </string>
    <string name="h5_4_text">Извлеки посторонний предмет пальцами, обернутыми
        салфеткой, бинтом. Перед извлечением инородного тела изо рта
        пострадавшего, лежащего на спине, необходимо повернуть голову набок.</string>
    <string name="h5_important">Внимание! Если в ходе реанимации самостоятельное
        дыхание, сердцебиение не восстанавливаются, а зрачки остаются широкими
        в течение 30-40 минут и помощи нет, следует считать, что наступила
        биологическая смерть пострадавшего.
    </string>
    <string name="butt_1_content">Памятка</string>
    <string name="butt_text_1">Выход здесь\n(левосторонний)</string>
    <string name="butt_text_2">Выход здесь\n(правосторонний)</string>
    <string name="butt_text_3">Направляющая стрелка</string>
    <string name="butt_text_4">Направляющая стрелка под углом 45°</string>
    <string name="butt_text_5">Направление к эвакуационному выходу направо</string>
    <string name="butt_text_6">Направление к эвакуационному выходу налево</string>
    <string name="butt_text_7">Направление к эвакуационному выходу направо вверх</string>
    <string name="butt_text_8">Направление к эвакуационному выходу налево вверх</string>
    <string name="butt_text_9">Направление к эвакуационному выходу направо вниз</string>
    <string name="butt_text_10">Направление к эвакуационному выходу налево вниз</string>
    <string name="butt_text_11">Указатель двери эвакуационного выхода (правосторонний)</string>
    <string name="butt_text_12">Указатель двери эвакуационного выхода (левосторонний)</string>
    <string name="butt_text_13">Направление к эвакуационному выходу прямо (правосторонний)</string>
    <string name="butt_text_14">Направление к эвакуационному выходу прямо (левосторонний)</string>
    <string name="butt_text_15">Направление к эвакуационному выходу по лестнице вниз (прав.)</string>
    <string name="butt_text_16">Направление к эвакуационному выходу по лестнице вниз (лев.)</string>
    <string name="butt_text_17">Направление к эвакуационному выходу по лестнице вверх (прав.)</string>
    <string name="butt_text_18">Направление к эвакуационному выходу по лестнице вверх (лев.)</string>
    <string name="butt_text_19">Для доступа вскрыть здесь</string>
    <string name="butt_text_20">Открывать движением от себя</string>
    <string name="butt_text_21">Открывать движением на себя</string>
    <string name="butt_text_22">Для открывания сдвинуть</string>
    <string name="butt_text_23">Пункт место сбора</string>
    <string name="butt_text_24">Указатель выхода</string>
    <string name="butt_text_25">Указатель запасного выхода</string>
</resources>