<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/bg_color"
    tools:context=".fragments.Tab4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="12sp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="12sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/h5"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_1"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_2"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130sp"
                android:importantForAccessibility="no"
                android:src="@raw/first_aid4_1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_1_text"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginBottom="4sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130sp"
                android:importantForAccessibility="no"
                android:src="@raw/first_aid4_2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_2_text"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginBottom="4sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130sp"
                android:importantForAccessibility="no"
                android:src="@raw/first_aid4_3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_3_text"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130sp"
                android:importantForAccessibility="no"
                android:src="@raw/first_aid2_4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_4_text"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginTop="4sp"
                android:layout_marginBottom="4sp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="0sp"
            app:cardBackgroundColor="#252525"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/h5_important"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>